Bad line break in gl quick entry, fixed.

--- a/themes/default/local_style/gl_quick_entries.css
+++ b/themes/default/local_style/gl_quick_entries.css
@@ -5,3 +5,6 @@ table.tablestyle2 input, table.tablestyle2 div.list_container {
 	width: 100%;
 	max-width: 300px;
 }
+div#edit_line table.tablestyle2 input, div#edit_line table.tablestyle2 div.list_container {
+	width: calc(100% - 1.5em);
+}
